# Phantom-Operator-Suite

./: README.md  RELEASE.md
assets/: Havoc-Teamserver.groovy
client/: CMakeLists.txt  README.md
client/include/UserInterface/Dialogs/: Connect.hpp
client/include/UserInterface/Widgets/: DemonInteracted.h  ListenerTable.hpp  ScriptManager.h  TeamserverTabSession.h
client/include/Util/: Base64.h  ColorText.h
client/src/: Main.cc
client/src/UserInterface/Dialogs/: About.cc
client/src/UserInterface/Widgets/: Store.cc  Teamserver.cc
client/src/Util/: Base.cpp
payloads/Demon/: README.md
payloads/Demon/include/core/: SysNative.h  TransportSmb.h
payloads/Demon/src/: Demon.c
payloads/Demon/src/core/: Download.c  Kerberos.c  Token.c  Transport.c
payloads/Demon/src/inject/: Inject.c  InjectUtil.c
payloads/DllLdr/Include/: Macro.h
payloads/Shellcode/Scripts/: Hasher.c
teamserver/: README.md  go.mod  main.go
teamserver/cmd/: client.go  cmd.go  server.go
teamserver/cmd/server/: agent.go  dispatch.go  listener.go  service.go  teamserver.go  types.go
teamserver/pkg/agent/: agent.go  demons.go  types.go
teamserver/pkg/common/: util.go
teamserver/pkg/common/builder/: builder.go
teamserver/pkg/common/certs/: https.go
teamserver/pkg/common/crypt/: aes.go
teamserver/pkg/common/packer/: packer.go
teamserver/pkg/common/parser/: parser.go
teamserver/pkg/db/: agents.go  links.go  misc.go
teamserver/pkg/events/: chatlog.go  demons.go  events.go  gate.go  listeners.go  service.go  teamserver.go
teamserver/pkg/handlers/: external.go  handlers.go  http.go  smb.go  types.go
teamserver/pkg/logger/: global.go  logger.go
teamserver/pkg/logr/: demon.go  logr.go  server.go
teamserver/pkg/packager/: packages.go
teamserver/pkg/profile/: config.go  profile.go
teamserver/pkg/profile/yaotl/: doc.go  eval_context.go  expr_list.go
teamserver/pkg/profile/yaotl/ext/customdecode/: README.md  customdecode.go  expression_type.go
teamserver/pkg/profile/yaotl/ext/dynblock/: expand_body.go  expand_body_test.go  expand_spec.go  expr_wrap.go  iteration.go  public.go  schema.go  unknown_body.go  variables.go  variables_hcldec.go  variables_test.go
teamserver/pkg/profile/yaotl/ext/transform/: error.go  transform.go  transform_test.go  transformer.go
teamserver/pkg/profile/yaotl/ext/tryfunc/: tryfunc.go  tryfunc_test.go
teamserver/pkg/profile/yaotl/ext/typeexpr/: README.md  doc.go  get_type.go  get_type_test.go  public.go  type_type.go
teamserver/pkg/profile/yaotl/ext/userfunc/: README.md  decode.go  decode_test.go  public.go
teamserver/pkg/profile/yaotl/gohcl/: decode.go  encode.go  schema.go  types.go
teamserver/pkg/profile/yaotl/hcldec/: block_labels.go  decode.go  public.go  public_test.go  schema.go  spec.go  spec_test.go  variables.go  variables_test.go
teamserver/pkg/profile/yaotl/hcled/: doc.go  navigation.go
teamserver/pkg/profile/yaotl/hclparse/: parser.go
teamserver/pkg/profile/yaotl/hclsimple/: hclsimple.go
teamserver/pkg/profile/yaotl/hclsyntax/: diagnostics.go  expression.go  expression_ops.go  expression_template.go  expression_vars.go  expression_vars_gen.go  file.go  generate.go  navigation.go  node.go  parser.go  parser_template.go  parser_traversal.go  peeker.go  public.go  scan_string_lit.go  scan_tokens.go  structure.go  structure_at_pos.go  token.go  token_type_string.go  variables.go  walk.go
teamserver/pkg/profile/yaotl/hclsyntax/fuzz/config/: fuzz.go
teamserver/pkg/profile/yaotl/hclsyntax/fuzz/expr/: fuzz.go
teamserver/pkg/profile/yaotl/hclsyntax/fuzz/template/: fuzz.go
teamserver/pkg/profile/yaotl/hclsyntax/fuzz/traversal/: fuzz.go
teamserver/pkg/profile/yaotl/hcltest/: doc.go  mock.go  mock_test.go
teamserver/pkg/profile/yaotl/hclwrite/: ast_attribute.go  ast_block.go  ast_block_test.go  ast_body.go  ast_body_test.go  ast_expression.go  examples_test.go  format.go  format_test.go  generate.go  generate_test.go  native_node_sorter.go  parser.go  parser_test.go  public.go  round_trip_test.go  tokens.go
teamserver/pkg/profile/yaotl/hclwrite/fuzz/config/: fuzz.go
teamserver/pkg/profile/yaotl/json/: ast.go  doc.go  navigation_test.go  parser.go  parser_test.go  public.go  public_test.go  scanner.go  scanner_test.go  structure.go  structure_test.go
teamserver/pkg/profile/yaotl/json/fuzz/config/: fuzz.go
teamserver/pkg/profile/yaotl/specsuite/: README.md  spec_test.go
teamserver/pkg/service/: agent.go  listener.go  service.go  types.go
teamserver/pkg/socks/: util.go
teamserver/pkg/utils/: utils.go
